--- a/clients/zl2/main.css
+++ b/clients/zl2/main.css
@@ -1,13 +1,3 @@
-@font-face {
-	font-family: "Texta";
-	font-weight: normal;
-	src: url(textabook.otf);
-}
-@font-face {
-	font-family: "Texta";
-	font-weight: bold;
-	src: url(texta.otf);
-}
 
 
 body {
@@ -46,7 +36,7 @@ body {
 .logobox {
 	width: 100%;
 	height: 100%;
-	background-image: url(images/z.gif);
+	background-image: url(images/zach.gif);
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: 24% auto;
