--- a/trump/main.css
+++ b/trump/main.css
@@ -39,6 +39,7 @@ body {
 	cursor: pointer;
 	-webkit-transition: transform 0.6s cubic-bezier(.05, .87, .55, 1);
 	box-sizing:border-box;
+	pointer-events: auto;
 }
 
 .colorbox p {
@@ -47,9 +48,6 @@ body {
 	margin-bottom: 0;
 }
 
-.roundbutton:hover {
-	-webkit-transform: scale(1.2, 1.2);
-}
 .colorbox a:hover {
 	-webkit-transform: scale(1.2, 1.2);
 }
@@ -82,7 +80,7 @@ body {
 	position: fixed;
 	background-repeat: no-repeat;
 	background-position: center center;
-	-webkit-transition: background-size 0.6s cubic-bezier(.05, .87, .55, 1);
+	-webkit-transition: background-size 0.4s cubic-bezier(.05, .87, .55, 1);
 	top:10pt;
 	left: 10pt;
 	cursor: pointer;
@@ -90,7 +88,7 @@ body {
 
 .av:hover {
 	background-size: 100% 100%;
-	-webkit-transition: background-size 0.6s cubic-bezier(.05, .87, .55, 1);
+	-webkit-transition: background-size 0.4s cubic-bezier(.05, .87, .55, 1);
 }
 
 .colorbox {
@@ -100,4 +98,42 @@ body {
 	height: 80pt;
 	bottom:0;
 	text-align: center;
+	pointer-events:none;
+}
+
+.sizebox {
+	position: fixed;
+	overflow: auto;
+	width: 100%;
+	height: 80pt;
+	top:0;
+	text-align: center;
+	pointer-events: none;
+}
+
+.sizebox p {
+	display: inline-block;
+	margin-top: 20pt;
+	margin-bottom: 0;
+}
+
+.sizebox a {
+	pointer-events: auto;
+	background-color: #fff;
+	width: 30pt;
+	height: 30pt;
+	display: block;
+	border-radius: 30pt;
+	margin-left: 10pt;
+	cursor: pointer;
+	-webkit-transition: transform 0.6s cubic-bezier(.05, .87, .55, 1);
+	box-sizing:border-box;
+	background-image: url(images/dot.svg);
+	background-size: 70%;
+	background-position: center center;
+	background-repeat: no-repeat;
+}
+
+.sizebox a:focus {
+	-webkit-transform: scale(1.3, 1.3);
 }
